@@ -1,5 +1,6 @@
 Changes for 1.6.1
 
+ - [ZBX-521] fixed problem in FreeBSD with threads in proc.num and proc.mem items (Sasha)
  - [DEV-238] added support of sec|#num for function count() (Sasha)
  - [DEV-238] added support of text items for function count() (Sasha)
  - [ZBX-495] fixed DB upgrade script when doing 1.1->1.4->1.6 (Alexei)
